# drifter_scanner

./: .gitignore  LICENSE  README.md  dist_run.py  drifter-scanner.spec  installer.iss  pyproject.toml
.github/workflows/: release.yml
drifter_scanner/: __main__.py  daemon.py  monitor.py  state.py  system_tray.py
drifter_scanner/auth/: google_auth.py
drifter_scanner/consumers/: api_writer.py  logger.py  spreadsheet_writer.py
drifter_scanner/models/: drifter_connection.py  jump_event.py
drifter_scanner/operators/: drifter_connections.py
drifter_scanner/producers/: jump_events.py
drifter_scanner/ui/: callback_url_dialog.py  log_buffer.py  logs_window.py  system_tray.py
